standards/gnds-2.0-alpha/alpha/c/src/v2.0/common/Covariance.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Covariance is the basic handle type in this file. Example:
//    // Create a default Covariance object:
//    Covariance handle = CovarianceDefault();
// Functions involving Covariance are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_COMMON_COVARIANCE
#define C_INTERFACE_ALPHA_V2_0_COMMON_COVARIANCE

#include "GNDStk.h"
#include "v2.0/common/Array.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct CovarianceClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Covariance
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct CovarianceClass *Covariance;

// --- Const-aware handles.
typedef const struct CovarianceClass *const ConstHandle2ConstCovariance;
typedef       struct CovarianceClass *const ConstHandle2Covariance;
typedef const struct CovarianceClass *      Handle2ConstCovariance;
typedef       struct CovarianceClass *      Handle2Covariance;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstCovariance
CovarianceDefaultConst();

// +++ Create, default
extern_c Handle2Covariance
CovarianceDefault();

// --- Create, general, const
extern_c Handle2ConstCovariance
CovarianceCreateConst(
   const char *const label,
   const char *const href,
   ConstHandle2ConstArray array
);

// +++ Create, general
extern_c Handle2Covariance
CovarianceCreate(
   const char *const label,
   const char *const href,
   ConstHandle2ConstArray array
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
CovarianceAssign(ConstHandle2Covariance This, ConstHandle2ConstCovariance from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
CovarianceDelete(ConstHandle2ConstCovariance This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
CovarianceRead(ConstHandle2Covariance This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
CovarianceWrite(ConstHandle2ConstCovariance This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
CovariancePrint(ConstHandle2ConstCovariance This);

// +++ Print to standard output, as XML
extern_c int
CovariancePrintXML(ConstHandle2ConstCovariance This);

// +++ Print to standard output, as JSON
extern_c int
CovariancePrintJSON(ConstHandle2ConstCovariance This);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceLabelHas(ConstHandle2ConstCovariance This);

// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceLabelGet(ConstHandle2ConstCovariance This);

// +++ Set
extern_c void
CovarianceLabelSet(ConstHandle2Covariance This, const char *const label);


// -----------------------------------------------------------------------------
// Metadatum: href
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceHrefHas(ConstHandle2ConstCovariance This);

// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceHrefGet(ConstHandle2ConstCovariance This);

// +++ Set
extern_c void
CovarianceHrefSet(ConstHandle2Covariance This, const char *const href);


// -----------------------------------------------------------------------------
// Child: array
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceArrayHas(ConstHandle2ConstCovariance This);

// --- Get, const
extern_c Handle2ConstArray
CovarianceArrayGetConst(ConstHandle2ConstCovariance This);

// +++ Get, non-const
extern_c Handle2Array
CovarianceArrayGet(ConstHandle2Covariance This);

// +++ Set
extern_c void
CovarianceArraySet(ConstHandle2Covariance This, ConstHandle2ConstArray array);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/common/Covariance/src/custom.h"

#undef extern_c
#endif